# microxc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  autogen.sh  configure.ac
examples/: git.c
include/: developer_path.h  errors.h  getters.h  logging_printf.h  runners.h  stripext.h  typedefs.h  validators.h  verbose_printf.h
lib/: Makefile.am  developer_path.c  developer_path.h  errors.h  getters.c  getters.h  getters.m  logging_printf.c  logging_printf.h  runners.c  runners.h  sdk_authenticity.c  sdk_authenticity.h  stripext.c  stripext.h  typedefs.c  typedefs.h  validators.c  validators.h  verbose_printf.c  verbose_printf.h
scripts/: clang
src/: Makefile.am  developer_path.c  getters.c  gtk_popup.c  logging_printf.c  runners.c  stripext.c  typedefs.c  validators.c  verbose_printf.c
src/xcode-select/: Makefile.am  xcode-select.c
src/xcrun/: Makefile.am  config_hadler.c  config_handler.c  config_handler.h  parsers.c  parsers.h  parsers.m  typedefs.h  xcrun  xcrun.c  xcrun.m
xcode-select/: xcode-select.c
