AC_PREREQ([2.69])
AC_INIT([microXcode], [0.0.2], [diegomagdaleno@protonmail.com])
AM_INIT_AUTOMAKE([foreign color-tests])
AC_USE_SYSTEM_EXTENSIONS
LT_INIT
AC_CONFIG_MACRO_DIRS([m4])
AC_PROG_OBJC


AC_PROG_CC
AC_CONFIG_FILES([Makefile
                                lib/Makefile
                                src/Makefile
                                src/xcrun/Makefile
                                src/xcode-select/Makefile])
AC_OUTPUT
