noinst_LTLIBRARIES = libmicroxcode.la

libmicroxcode_la_CFLAGS =
libmicroxcode_la_SOURCES = developer_path.c verbose_printf.c stripext.c validators.c logging_printf.c getters.m runners.c
libmicroxcode_LDFLAGS = -framework Foundation -framework AppKit

EXTRA_DIST = developer_path.h verbose_printf.h stripext.h
